Started workers component and store
Co-authored-by: Victor Rasmussen (s204475) <s204475@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:style": "stylelint src/**/*.{css,scss,vue}"
   },
   "dependencies": {
+    "pinia": "^2.0.32",
     "vue": "^3.2.45"
   },
   "devDependencies": {
