--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "browserslist": "defaults",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -15,6 +16,7 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@csstools/normalize.css": "^12.0.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "@vitejs/plugin-vue": "^4.0.0",
