Added supabase authentication

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:style": "stylelint src/**/*.{css,scss,vue}"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.10.0",
     "pinia": "^2.0.32",
     "vue": "^3.2.45",
     "vue-router": "4"
