--- a/package.json
+++ b/package.json
@@ -12,33 +12,36 @@
     "lint:style": "stylelint src/**/*.{css,scss,vue}"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.10.0",
-    "pinia": "^2.0.32",
-    "vue": "^3.2.45",
-    "vue-router": "4"
+    "@supabase/supabase-js": "^2.21.0",
+    "pinia": "^2.0.35",
+    "vue": "^3.2.47",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@csstools/normalize.css": "^12.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.52.0",
-    "@typescript-eslint/parser": "^5.52.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "autoprefixer": "^10.4.13",
-    "eslint": "^8.34.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "@vitejs/plugin-vue": "^4.2.1",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.40.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.9.0",
-    "postcss": "^8.4.21",
+    "eslint-plugin-vue": "^9.11.1",
+    "postcss": "^8.4.23",
     "postcss-html": "^1.5.0",
-    "postcss-nesting": "^11.2.1",
-    "prettier": "^2.8.4",
-    "stylelint": "^15.2.0",
-    "stylelint-config-recommended": "^10.0.1",
+    "postcss-nesting": "^11.2.2",
+    "prettier": "^2.8.8",
+    "stylelint": "^15.6.1",
+    "stylelint-config-recommended": "^12.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard": "^30.0.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vue-tsc": "^1.0.24"
+    "stylelint-config-standard": "^33.0.0",
+    "typescript": "^5.0.4",
+    "unplugin-auto-import": "^0.15.3",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.3.5",
+    "vite-plugin-pages": "^0.29.0",
+    "vue-tsc": "^1.6.4"
   }
 }
