--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:style": "stylelint src/**/*.{css,scss,vue}"
   },
   "dependencies": {
+    "@vueuse/core": "^10.2.1",
     "pinia": "^2.1.3",
     "pocketbase": "^0.15.3",
     "vue": "^3.3.4",
