--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,10 @@
     "lib": ["ESNext", "DOM"],
     "skipLibCheck": true,
     "noEmit": true,
-    "types": ["vite-plugin-pages/client"]
+    "types": ["vite-plugin-pages/client"],
+    "paths": {
+      "~*": ["./src/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
