--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "lint:style": "stylelint src/**/*.{css,scss,vue}"
   },
   "dependencies": {
+    "@tanstack/vue-table": "^8.9.3",
     "@vueuse/core": "^10.2.1",
+    "file-saver": "^2.0.5",
     "pinia": "^2.1.3",
     "pocketbase": "^0.15.3",
     "vue": "^3.3.4",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@csstools/normalize.css": "^12.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "^20.4.4",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
