--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/vue-table": "^8.9.3",
     "@vueuse/core": "^10.2.1",
     "file-saver": "^2.0.5",
+    "floating-vue": "2.0.0-beta.24",
     "pinia": "^2.1.3",
     "pocketbase": "^0.15.3",
     "vue": "^3.3.4",
@@ -46,7 +47,9 @@
     "unplugin-auto-import": "^0.16.0",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.8",
+    "vite-plugin-image-presets": "^0.3.4",
     "vite-plugin-pages": "^0.30.1",
+    "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^1.6.5"
   }
 }
