--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia": "^2.1.3",
     "pocketbase": "^0.15.3",
     "vue": "^3.3.4",
+    "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.2.1"
   },
   "devDependencies": {
