--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@tanstack/vue-table": "^8.9.3",
     "@vueuse/core": "^10.2.1",
     "file-saver": "^2.0.5",
-    "floating-vue": "2.0.0-beta.24",
     "pinia": "^2.1.3",
     "pocketbase": "^0.15.3",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.1"
+    "vue-router": "^4.2.1",
+    "vuetify": "^3.3.12"
   },
   "devDependencies": {
     "@csstools/normalize.css": "^12.0.0",
