Fixed build errors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,10 @@
       "~/*": ["./src/*"]
     }
   },
+  "vueCompilerOptions": {
+    "experimentalSuppressUnknownJsxPropertyErrors": false,
+    "strictTemplates": false
+  },
   "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
