--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/vue-table": "^8.10.7",
     "@vueuse/core": "^10.2.1",
     "chart.js": "^4.3.3",
+    "chartjs-plugin-annotation": "^3.0.1",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "floating-vue": "2.0.0-beta.24",
