--- a/package.json
+++ b/package.json
@@ -12,51 +12,51 @@
     "lint:style": "stylelint src/**/*.{css,scss,vue}"
   },
   "dependencies": {
-    "@tanstack/vue-table": "^8.10.7",
-    "@vueuse/core": "^10.2.1",
-    "chart.js": "^4.3.3",
+    "@tanstack/vue-table": "^8.13.2",
+    "@vueuse/core": "^10.9.0",
+    "chart.js": "^4.4.2",
     "chartjs-plugin-annotation": "^3.0.1",
-    "exceljs": "^4.3.0",
+    "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
-    "floating-vue": "2.0.0-beta.24",
-    "pinia": "^2.1.3",
-    "pocketbase": "^0.15.3",
-    "vite-plugin-vuetify": "^1.0.2",
-    "vue": "^3.3.4",
-    "vue-chartjs": "^5.2.0",
+    "floating-vue": "5.2.2",
+    "pinia": "^2.1.7",
+    "pocketbase": "^0.21.1",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.0",
     "vue-confetti-explosion": "^1.0.2",
-    "vue-router": "^4.2.1",
-    "vuetify": "^3.3.12"
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.5.9"
   },
   "devDependencies": {
-    "@csstools/normalize.css": "^12.0.0",
-    "@types/file-saver": "^2.0.5",
-    "@types/node": "^20.4.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.3",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.41.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-vue": "^9.13.0",
-    "postcss": "^8.4.23",
-    "postcss-html": "^1.5.0",
-    "postcss-nesting": "^11.2.2",
-    "prettier": "^2.8.8",
-    "stylelint": "^15.6.2",
-    "stylelint-config-recommended": "^12.0.0",
-    "stylelint-config-recommended-vue": "^1.4.0",
-    "stylelint-config-standard": "^33.0.0",
-    "typescript": "^5.0.4",
-    "unplugin-auto-import": "^0.16.0",
-    "unplugin-vue-components": "^0.24.1",
-    "vite": "^4.3.8",
+    "@csstools/normalize.css": "^12.1.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/node": "^20.11.28",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "autoprefixer": "^10.4.18",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.23.0",
+    "postcss": "^8.4.35",
+    "postcss-html": "^1.6.0",
+    "postcss-nesting": "^12.1.0",
+    "prettier": "^3.2.5",
+    "stylelint": "^16.2.1",
+    "stylelint-config-recommended": "^14.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^36.0.0",
+    "typescript": "^5.4.2",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
+    "vite": "^5.1.6",
     "vite-plugin-image-presets": "^0.3.4",
-    "vite-plugin-pages": "^0.30.1",
-    "vite-svg-loader": "^4.0.0",
-    "vue-tsc": "^1.8.8"
+    "vite-plugin-pages": "^0.32.0",
+    "vite-svg-loader": "^5.1.0",
+    "vue-tsc": "^2.0.6"
   }
 }
