--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.23.0",
