--- a/package.json
+++ b/package.json
@@ -12,54 +12,54 @@
     "lint:style": "stylelint src/**/*.{css,scss,vue}"
   },
   "dependencies": {
-    "@tanstack/vue-table": "^8.13.2",
-    "@vueuse/core": "^10.9.0",
-    "chart.js": "^4.4.2",
-    "chartjs-plugin-annotation": "^3.0.1",
+    "@tanstack/vue-table": "^8.20.5",
+    "@vueuse/core": "^11.1.0",
+    "chart.js": "^4.4.6",
+    "chartjs-plugin-annotation": "^3.1.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "floating-vue": "5.2.2",
-    "pinia": "^2.1.7",
-    "pocketbase": "^0.21.1",
-    "ts-deepmerge": "^7.0.0",
-    "vite-plugin-vuetify": "^2.0.3",
-    "vue": "^3.4.21",
-    "vue-chartjs": "^5.3.0",
+    "pinia": "^2.2.5",
+    "pocketbase": "^0.21.5",
+    "ts-deepmerge": "^7.0.1",
+    "vite-plugin-vuetify": "^2.0.4",
+    "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.1",
     "vue-confetti-explosion": "^1.0.2",
-    "vue-router": "^4.3.0",
-    "vuetify": "^3.5.9"
+    "vue-router": "^4.4.5",
+    "vuetify": "^3.7.3"
   },
   "devDependencies": {
     "@csstools/normalize.css": "^12.1.1",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^20.11.28",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^8.57.0",
+    "@types/node": "^22.8.4",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.1.3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.13.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.23.0",
-    "postcss": "^8.4.35",
-    "postcss-html": "^1.6.0",
-    "postcss-nesting": "^12.1.0",
-    "prettier": "^3.2.5",
-    "stylelint": "^16.2.1",
-    "stylelint-config-recommended": "^14.0.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.30.0",
+    "postcss": "^8.4.47",
+    "postcss-html": "^1.7.0",
+    "postcss-nesting": "^13.0.1",
+    "prettier": "^3.3.3",
+    "stylelint": "^16.10.0",
+    "stylelint-config-recommended": "^14.0.1",
     "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard": "^36.0.0",
-    "typescript": "^5.4.2",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.1.6",
+    "stylelint-config-standard": "^36.0.1",
+    "typescript": "^5.6.3",
+    "unplugin-auto-import": "^0.18.3",
+    "unplugin-vue-components": "^0.27.4",
+    "unplugin-vue-router": "^0.10.8",
+    "vite": "^5.4.10",
     "vite-plugin-image-presets": "^0.3.4",
-    "vite-plugin-pages": "^0.32.0",
     "vite-svg-loader": "^5.1.0",
-    "vue-tsc": "^2.0.6"
+    "vue-tsc": "^2.1.8"
   }
 }
