--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
-    "floating-vue": "5.2.2",
+    "lucide-vue-next": "^0.454.0",
     "pinia": "^2.2.5",
     "pocketbase": "^0.21.5",
     "ts-deepmerge": "^7.0.1",
