--- a/package.json
+++ b/package.json
@@ -61,5 +61,6 @@
     "vite-plugin-image-presets": "^0.3.4",
     "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.1.8"
-  }
+  },
+  "packageManager": "pnpm@10.4.0+sha512.6b849d0787d97f8f4e1f03a9b8ff8f038e79e153d6f11ae539ae7c435ff9e796df6a862c991502695c7f9e8fac8aeafc1ac5a8dab47e36148d183832d886dd52"
 }
