--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tanstack/vue-table": "^8.20.5",
     "@vueuse/core": "^11.1.0",
+    "@vueuse/sound": "^2.1.3",
     "chart.js": "^4.4.6",
     "chartjs-plugin-annotation": "^3.1.0",
     "exceljs": "^4.4.0",
